# Tooru

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.lua  test-app.lua  test-unit.lua
doc/: Dev-Man.en.md  Dev-Man.zh.md  Input-Game-Spec.en.md  Input-Game-Spec.zh.md  linterface.en.md  linterface.zh.md
test/: csg-input.toml  e-ev-in.yaml  evo.luaraw  rpg-in.yaml  rps.luaraw
tooru/: fp.lua  game-element.lua  game.lua  init.lua  render.lua  solver.lua  u.lua
tooru/gmod/: csg.lua  evo.lua  rpg.lua  sg.lua
tooru/res/: text.en.txt  text.lua  text.zh.txt
tooru/src/: evosim.c  lgt.c  others.c  tooru.h  u.c
